objects/EUR_TR_POSM__c.object
<CustomObject>
    <description>Is using by PR Turkey TT Project</description>
    <fields>
        <fullName>EUR_TR_ApprovalStatus__c</fullName>
        <label>POSM Onay Durumu</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>EUR_TR_POSMApprovalStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_TR_BrandOther__c</fullName>
        <label>EUR_TR_BrandOther</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_TR_Brand__c</fullName>
        <label>EUR_TR_Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Absolut</fullName>
                </value>
                <value>
                    <fullName>Chivas</fullName>
                </value>
                <value>
                    <fullName>Ballantine’s</fullName>
                </value>
                <value>
                    <fullName>Olmeca</fullName>
                </value>
                <value>
                    <fullName>Malt</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Luxury</fullName>
                </value>
                <value>
                    <fullName>Jameson</fullName>
                </value>
                <value>
                    <fullName>Beefeater</fullName>
                </value>
                <value>
                    <fullName>Passport</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_TR_Budget__c</fullName>
        <label>EUR_TR_Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_TR_ChangedFieldName__c</fullName>
        <label>Değişen Alan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_TR_FieldNewValue__c</fullName>
        <label>EUR TR Field New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_TR_FieldOldValue__c</fullName>
        <label>EUR TR Field Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_TR_POSMQuantity__c</fullName>
        <label>Adet/m2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_POSMType__c</fullName>
        <label>EUR_TR_POSMType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Raf İçi</fullName>
                </value>
                <value>
                    <fullName>Tüm Raf (Marangozluk)</fullName>
                </value>
                <value>
                    <fullName>Hot Spot</fullName>
                </value>
                <value>
                    <fullName>Stand</fullName>
                </value>
                <value>
                    <fullName>Raf</fullName>
                </value>
                <value>
                    <fullName>Tadilat</fullName>
                </value>
                <value>
                    <fullName>Sigara - Raf</fullName>
                </value>
                <value>
                    <fullName>Soğutucu - Dolap</fullName>
                </value>
                <value>
                    <fullName>Pelin Deneme Stant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_TR_PlacementDate__c</fullName>
        <label>EUR_TR_PlacementDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EUR_TR_RelatedAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EUR_TR_RelatedAccount</label>
        <referenceTo>EUR_TR_Account__c</referenceTo>
        <relationshipLabel>EUR TR POSM</relationshipLabel>
        <relationshipName>EUR_TR_POSM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_TR_RelatedPOSMApprovalHistory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>İlgili POSM Geçmişi</label>
        <referenceTo>EUR_TR_Approval__c</referenceTo>
        <relationshipLabel>EUR TR POSM</relationshipLabel>
        <relationshipName>EUR_TR_POSMChanges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_TR_RelatedPOSMSubType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>İlgili Ürün Alt Tipi</label>
        <referenceTo>EUR_TR_Definition__c</referenceTo>
        <relationshipLabel>EUR TR POSM</relationshipLabel>
        <relationshipName>EUR_TR_POSM_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_TR_RelatedPOSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EUR TR Related POSM</label>
        <referenceTo>EUR_TR_POSM__c</referenceTo>
        <relationshipLabel>EUR TR POSM</relationshipLabel>
        <relationshipName>EUR_TR_POSMHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_TR_UnitPrice__c</fullName>
        <label>POSM Birim Fiyat</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_TR_VendorEmailAddress__c</fullName>
        <label>Tedarikçi Email Adresi</label>
        <type>Email</type>
    </fields>
    <label>EUR TR POSM</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{00000000}</displayFormat>
        <label>EUR TR POSM No (Auto)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EUR TR POSM</pluralLabel>
    <recordTypes>
        <fullName>EUR_TR_POSM</fullName>
        <active>true</active>
        <label>EUR_TR_POSM</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_TR_POSMHistory</fullName>
        <active>true</active>
        <label>EUR TR POSM History</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>